Repair_Quality_Analyzer/Temp_Java_Folder/error.txt
temp.java:30: error: class Tester is public, should be declared in a file named Tester.java
public class Tester 
       ^
1 error
